{
    "name": "FlipperControls",
    "maps": [
        {
            "name": "Player",
            "id": "d954efd6-5592-4e39-bf48-880831cd1dd3",
            "actions": [
                {
                    "name": "LeftUp",
                    "type": "Button",
                    "id": "42cebd4a-487d-4d6b-9855-72b3ade0b02b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightUp",
                    "type": "Button",
                    "id": "62187708-6526-45be-ac6e-539f248c2e6e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftDown",
                    "type": "Button",
                    "id": "7d8cfaa7-9ad3-4a8c-9603-cf85cdfec842",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightDown",
                    "type": "Button",
                    "id": "13b7cd52-ffa3-44c7-94f7-6282ae94924a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "30a1b79b-2ac2-4384-afdc-1241b5b535e9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "9fe1228b-d89c-4738-8163-95e4ea2f0d84",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Delete",
                    "type": "Button",
                    "id": "479ae63d-8762-45f0-ad74-f3cc66a97b61",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Place",
                    "type": "PassThrough",
                    "id": "5644c44b-8327-4563-aeb2-7502851e0906",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Hold"
                },
                {
                    "name": "RotationRight",
                    "type": "Button",
                    "id": "931684cf-7f9c-4a17-827d-a467af595302",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=2,pressPoint=0.1)"
                },
                {
                    "name": "RotationLeft",
                    "type": "Button",
                    "id": "e75088e3-c810-40af-8f23-e15702f72455",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=2,pressPoint=0.1)"
                },
                {
                    "name": "BumpTower",
                    "type": "Button",
                    "id": "97bce27d-0fcb-46c5-963e-0784b4c407c3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=2,pressPoint=0.1)"
                },
                {
                    "name": "PortalTower",
                    "type": "Button",
                    "id": "7b06594c-0f57-4091-8b38-7e231047d9b3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=2,pressPoint=0.1)"
                },
                {
                    "name": "WindTower",
                    "type": "Button",
                    "id": "b596fa6f-a99e-4498-992d-33a796ee6ead",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=2,pressPoint=0.1)"
                },
                {
                    "name": "CannonTower",
                    "type": "Button",
                    "id": "c08d8fa0-3317-4e07-ae8a-d35f5d40abb6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=2,pressPoint=0.1)"
                },
                {
                    "name": "TowerUpgrade",
                    "type": "Button",
                    "id": "df260fac-254f-453e-8808-3b59664f13e7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=2,pressPoint=0.1)"
                },
                {
                    "name": "CharacterAbility",
                    "type": "Button",
                    "id": "28f5f1dc-b45f-42ee-be57-dd7d348ea871",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "11684278-78ef-4d10-a523-6c77d29ef235",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5cb743d0-f6a0-4b34-a214-26dd2fb08891",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ad08085-6460-4154-bc88-6006d485d630",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a3d3756-19fb-4ba9-b0ca-c58fbe0865aa",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc457484-7c90-448c-b743-b1e54ad0bd8e",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "LeftDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "02061610-213c-472c-b54b-ca7e145372d5",
                    "path": "<Keyboard>/q",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "LeftDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7e05322-f328-49b5-b84b-fa3606efd497",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "RightDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a13c6ee9-fb98-453e-b36e-b673ae6a39b0",
                    "path": "<Keyboard>/e",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "RightDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0280dc0e-4ed6-440a-b834-2c081273fd3c",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e6f23b01-9af4-4428-87fe-e189450d2ade",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5506605f-93fc-430b-bed4-57f8146e3080",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "424161c4-9abd-414d-ac88-b0c4ce593a9c",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b8079859-d8f3-4cd0-99c1-de052be2580d",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Delete",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c59d50f-3658-4ff7-a487-f62b21698a45",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Delete",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cf3e2fa2-b329-46a9-b66d-fe2d45d13b31",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Place",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "8a9c1218-cb2b-46b7-b106-1bcc236e1ea4",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Place",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "13188458-bc72-4c45-8b17-1f11f15a9238",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Place",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "58efdcb2-b9e8-4b76-8771-1c0026bd7cc5",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Place",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "595e65dc-f219-48dd-8c86-f6a3a3da6f57",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Place",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6922776d-a8a4-4667-9021-fd7b54ee2815",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Place",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6e457358-f5b2-46e2-a6fb-5197dc21e34d",
                    "path": "<DualShockGamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Place",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9db1cc2e-1578-4866-ab8f-ab5056b19720",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "Press(pressPoint=0.05)",
                    "processors": "",
                    "groups": "",
                    "action": "RotationRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4759806-f280-4a4f-abe0-7c764938b7a7",
                    "path": "<Keyboard>/z",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "RotationRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb406089-9f3c-463e-be2b-0933e2520d62",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Press(pressPoint=0.05)",
                    "processors": "",
                    "groups": "",
                    "action": "RotationLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae453de7-4c00-44c1-8671-5d32f4858643",
                    "path": "<Keyboard>/c",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "RotationLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ecb783f0-efd0-4b59-a158-d560625b5efb",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BumpTower",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84417725-b5a0-46f9-b454-1dac59cbaaca",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BumpTower",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ae2cfa2-88bf-40ca-8002-bf887dff7305",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PortalTower",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "68a33200-993c-4c1a-817c-a7f3d948f98d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PortalTower",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "04f60ddd-ab5c-4fe1-b507-c9eefb4c8a68",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WindTower",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ac73d17e-21c7-4ddb-955e-73af546b190b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WindTower",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "997bbd58-1268-47fa-a4fb-0dc467f3a25a",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CannonTower",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "174a79ab-bdf2-43ef-b0fe-72a8f32749ce",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CannonTower",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df7371f7-99e5-4644-9131-1358bc6536a1",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TowerUpgrade",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da67f39c-2bbf-41c3-8a99-c6f51fa18ba5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TowerUpgrade",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61852967-3aeb-4e40-aed0-5d0014cf033e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CharacterAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5008a53e-e9c1-40b7-80ea-89d5b113eac4",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CharacterAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}